--- a/PayBuddy/MainWindow.xaml
+++ b/PayBuddy/MainWindow.xaml
@@ -5,15 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PayBuddy"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800"
-        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-        TextElement.Foreground="{DynamicResource MaterialDesignBody}"
-        TextElement.FontWeight="Regular"
-        TextElement.FontSize="13"
-        TextOptions.TextFormattingMode="Ideal" 
-        TextOptions.TextRenderingMode="Auto"        
-        Background="{DynamicResource MaterialDesignPaper}"
-        FontFamily="{DynamicResource MaterialDesignFont}">
+        Title="MainWindow" Height="450" Width="800">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="75"/>
@@ -31,86 +23,46 @@
         </Border>
         <Border Grid.Column="1" BorderThickness="1" BorderBrush="Black">
             <ScrollViewer>
-                <StackPanel>
-                    <Border BorderBrush="Black" BorderThickness="1" Margin="10,5">
-                        <Grid>
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="*"/>
-                                <ColumnDefinition Width="*"/>
-                                <ColumnDefinition Width="*"/>
-                            </Grid.ColumnDefinitions>
-                            <Grid.RowDefinitions>
-                                <RowDefinition Height="25"/>
-                                <RowDefinition MinHeight="50"/>
-                                <RowDefinition Height="40"/>
-                            </Grid.RowDefinitions>
-                            <Label Grid.Column="0" Grid.Row="0" Content="Nazev"/>
-                            <Label Grid.Column="1" Grid.Row="0" Content="od: Jmeno" HorizontalAlignment="Center"/>
-                            <Label Grid.Column="2" Grid.Row="0" Content="199 Kč" HorizontalAlignment="Right"/>
-                            <TextBlock Padding="7" Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="1" Text="LoremLoremLoremLoremLoremLoremLoremLoremLoremLoremLoremLoremLoremLoremLoremLoremLoremLoremLoremLoremLoremLoremLoremLoremLoremLoremLoremLoremLoremLoremLoremLoremLoremLoremLoremLoremLoremLoremLoremLoremLoremLoremLoremLoremLoremLoremLorem" TextWrapping="Wrap"/>
-                            <StackPanel Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Right">
-                                <Button Margin="0 0 5 0" Padding="5" VerticalAlignment="Center" HorizontalAlignment="Left" Content="no" Height="auto" Width="50" BorderBrush="Red" Background="Red"/>
-                                <Button Margin="0 0 5 0" Padding="5" VerticalAlignment="Center" HorizontalAlignment="Left" Content="yes" Height="auto" Width="50" BorderBrush="LimeGreen" Background="LimeGreen"/>
-                            </StackPanel>
-                        </Grid>
-                    </Border>
-                    <Border BorderBrush="Black" BorderThickness="1" Margin="10,5">
-                        <Grid>
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="*"/>
-                                <ColumnDefinition Width="*"/>
-                                <ColumnDefinition Width="*"/>
-                            </Grid.ColumnDefinitions>
-                            <Grid.RowDefinitions>
-                                <RowDefinition Height="25"/>
-                                <RowDefinition MinHeight="50"/>
-                                <RowDefinition Height="40"/>
-                            </Grid.RowDefinitions>
-                            <Label Grid.Column="0" Grid.Row="0" Content="Nazev"/>
-                            <Label Grid.Column="1" Grid.Row="0" Content="od: Jmeno" HorizontalAlignment="Center"/>
-                            <Label Grid.Column="2" Grid.Row="0" Content="199 Kč" HorizontalAlignment="Right"/>
-                            <TextBlock Padding="7" Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="1" Text="LoremLoremLoremLoremLoremLoremLoremLoremLoremLoremLoremLoremLoremLoremLoremLoremLoremLoremLoremLoremLoremLoremLoremLoremLoremLoremLoremLoremLoremLoremLoremLoremLoremLoremLoremLoremLoremLoremLoremLoremLoremLoremLoremLoremLoremLoremLorem" TextWrapping="Wrap"/>
-                            <StackPanel Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Right">
-                                <Button Margin="0 0 5 0" Padding="5" VerticalAlignment="Center" HorizontalAlignment="Left" Content="no" Height="auto" Width="50" BorderBrush="Red" Background="Red"/>
-                                <Button Margin="0 0 5 0" Padding="5" VerticalAlignment="Center" HorizontalAlignment="Left" Content="yes" Height="auto" Width="50" BorderBrush="LimeGreen" Background="LimeGreen"/>
-                            </StackPanel>
-                        </Grid>
-                    </Border>
-                    <Border BorderBrush="Black" BorderThickness="1" Margin="10,5">
-                        <Grid>
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="*"/>
-                                <ColumnDefinition Width="*"/>
-                                <ColumnDefinition Width="*"/>
-                            </Grid.ColumnDefinitions>
-                            <Grid.RowDefinitions>
-                                <RowDefinition Height="25"/>
-                                <RowDefinition MinHeight="50"/>
-                                <RowDefinition Height="40"/>
-                            </Grid.RowDefinitions>
-                            <Label Grid.Column="0" Grid.Row="0" Content="Nazev"/>
-                            <Label Grid.Column="1" Grid.Row="0" Content="od: Jmeno" HorizontalAlignment="Center"/>
-                            <Label Grid.Column="2" Grid.Row="0" Content="199 Kč" HorizontalAlignment="Right"/>
-                            <TextBlock Padding="7" Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="1" Text="LoremLoremLoremLoremLoremLoremLoremLoremLoremLoremLoremLoremLoremLoremLoremLoremLoremLoremLoremLoremLoremLoremLoremLoremLoremLoremLoremLoremLoremLoremLoremLoremLoremLoremLoremLoremLoremLoremLoremLoremLoremLoremLoremLoremLoremLoremLorem" TextWrapping="Wrap"/>
-                            <StackPanel Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Right">
-                                <Button Margin="0 0 5 0" Padding="5" VerticalAlignment="Center" HorizontalAlignment="Left" Content="no" Height="auto" Width="50" BorderBrush="Red" Background="Red"/>
-                                <Button Margin="0 0 5 0" Padding="5" VerticalAlignment="Center" HorizontalAlignment="Left" Content="yes" Height="auto" Width="50" BorderBrush="LimeGreen" Background="LimeGreen"/>
-                            </StackPanel>
-                        </Grid>
-                    </Border>
-                </StackPanel>
+                <ItemsControl Name="Payments">
+                    <ItemsControl.ItemTemplate>
+                        <DataTemplate>
+                            <Border BorderBrush="Black" BorderThickness="1">
+                                <Grid>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="*"/>
+                                        <ColumnDefinition Width="*"/>
+                                        <ColumnDefinition Width="*"/>
+                                    </Grid.ColumnDefinitions>
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition Height="25"/>
+                                        <RowDefinition MinHeight="50"/>
+                                        <RowDefinition Height="40"/>
+                                    </Grid.RowDefinitions>
+                                    <Label Grid.Column="0" Grid.Row="0" Content="{Binding Title}"/>
+                                    <Label Grid.Column="1" Grid.Row="0" Content="{Binding Name}" HorizontalAlignment="Center"/>
+                                    <Label Grid.Column="2" Grid.Row="0" Content="{Binding Amount}" HorizontalAlignment="Right"/>
+                                    <TextBlock Padding="7" Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="1" Text="{Binding Description}" TextWrapping="Wrap"/>
+                                    <StackPanel Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Right">
+                                        <Button Margin="0 0 5 0" Padding="5" VerticalAlignment="Center" HorizontalAlignment="Left" Content="no" Height="auto" Width="50" BorderBrush="Red" Background="Red"/>
+                                        <Button Margin="0 0 5 0" Padding="5" VerticalAlignment="Center" HorizontalAlignment="Left" Content="yes" Height="auto" Width="50" BorderBrush="LimeGreen" Background="LimeGreen"/>
+                                    </StackPanel>
+                                </Grid>
+                            </Border>
+                        </DataTemplate>
+                    </ItemsControl.ItemTemplate>
+                    
+                </ItemsControl>
+                
             </ScrollViewer>
         </Border>
         <Border Grid.Column="2" BorderThickness="1" BorderBrush="Black">
-            <StackPanel>
-                <Rectangle Stroke="Black" StrokeThickness="1" Margin="5" Width="auto" Height="20"/>
-                <Rectangle Stroke="Black" StrokeThickness="1" Margin="5" Width="auto" Height="20"/>
-                <Rectangle Stroke="Black" StrokeThickness="1" Margin="5" Width="auto" Height="20"/>
-                <Rectangle Stroke="Black" StrokeThickness="1" Margin="5" Width="auto" Height="20"/>
-                <Rectangle Stroke="Black" StrokeThickness="1" Margin="5" Width="auto" Height="20"/>
-                <Rectangle Stroke="Black" StrokeThickness="1" Margin="5" Width="auto" Height="20"/>
-                <Rectangle Stroke="Black" StrokeThickness="1" Margin="5" Width="auto" Height="20"/>
-            </StackPanel>
+            <!--
+            <ItemsControl Name="Friends">
+                <ItemsControl.ItemTemplate>
+                    
+                </ItemsControl.ItemTemplate>
+            </ItemsControl>
+            -->
         </Border>
     </Grid>
 </Window>
