--- a/PayBuddy/MainWindow.xaml
+++ b/PayBuddy/MainWindow.xaml
@@ -14,9 +14,10 @@
         <Grid x:Name="LoadingView" Visibility="Hidden">
             <Label Content="Loading..." FontSize="50" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         </Grid>
+        <!-- //////////\\\\\\\\\\ -->
 
         <!-- ////////// LOGIN VIEW \\\\\\\\\\ -->
-        <Grid x:Name="LoginView" Grid.ColumnSpan="3" Visibility="Hidden" VerticalAlignment="Stretch" HorizontalAlignment="Stretch">
+        <Grid x:Name="LoginView" Grid.ColumnSpan="3" Visibility="Visible" VerticalAlignment="Stretch" HorizontalAlignment="Stretch">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="*"/>
@@ -78,14 +79,16 @@
             </Grid>
             
         </Grid>
+        <!-- //////////\\\\\\\\\\ -->
         
         <!-- ////////// MAIN VIEW \\\\\\\\\\ -->
-        <Grid x:Name="MainView" Visibility="Visible">
+        <Grid x:Name="MainView" Visibility="Hidden">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="75"/>
                 <ColumnDefinition Width="2*"/>
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
+            <!-- ///// Actions \\\\\ -->
             <Border Grid.Column="0" BorderThickness="1" BorderBrush="Black">
                 <StackPanel>
                     <Border Padding="5" BorderBrush="Black" BorderThickness="1" Margin="5" Width="60" Height="60">
@@ -105,14 +108,16 @@
                     </Button>
                 </StackPanel>
             </Border>
+            <!-- /////\\\\\ -->
+            <!-- ///// Payments \\\\\ -->
             <Border Grid.Column="1" BorderThickness="1" BorderBrush="Black">
                 <ScrollViewer>
                     <Grid>
                         <Grid.RowDefinitions>
-                            <RowDefinition Height="30"/>
+                            <RowDefinition Height="auto"/>
                             <RowDefinition Height="*"/>
                         </Grid.RowDefinitions>
-                        <Label Grid.Row="0" Content="Payments"/>
+                        <Label Grid.Row="0" Content="Payments" FontWeight="Bold" FontSize="17"/>
                         <ItemsControl Grid.Row="1" Name="Payments">
                             <ItemsControl.ItemTemplate>
                                 <DataTemplate>
@@ -144,15 +149,20 @@
                     </Grid>
                 </ScrollViewer>
             </Border>
+            <!-- /////\\\\\ -->
+            <!-- ///// Friends \\\\\ -->
             <Border Grid.Column="2" BorderThickness="1" BorderBrush="Black">
                 <ScrollViewer>
-                    <Grid>
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="30"/>
-                            <RowDefinition Height="*"/>
-                        </Grid.RowDefinitions>
-                        <Label Grid.Row="0" Content="Friends"/>
-                        <ItemsControl Grid.Row="1" Name="Friends">
+                    <StackPanel>
+                        <Label Content="Friends" FontWeight="Bold" FontSize="17"/>
+                        <Separator Margin="0 10"/>
+                        <StackPanel>
+                            <Label Content="Email of potentional friend:"/>
+                            <TextBox x:Name="AddFriendEmail"/>
+                            <Button Click="AddFriend_ClickButton" Content="Add"  Margin="0 0 0 5"/>
+                        </StackPanel>
+                        <Separator Margin="0 10"/>
+                        <ItemsControl x:Name="Friends">
                             <ItemsControl.ItemTemplate>
                                 <DataTemplate>
                                     <Border BorderBrush="Black" BorderThickness="1">
@@ -164,11 +174,13 @@
                                 </DataTemplate>
                             </ItemsControl.ItemTemplate>
                         </ItemsControl>
-                    </Grid>
+                    </StackPanel>
                 </ScrollViewer>
                 
             </Border>
+            <!-- /////\\\\\ -->
         </Grid>
+        <!-- //////////\\\\\\\\\\ -->
         
     </Grid>
 </Window>
